tests/regression/errors/basic/syntax_error_25.csd
// Syntax error test 25 - missing semicolon
sus x drip = 25
sus y drip = x +   // Missing operand
vibez.spill("This should not execute")
